<resources>
    <string name="app_name">BristolStreetview</string>
    <string name="manual_mode">Manual mode</string>
    <string name="automatic_mode">Automatic mode</string>
    <string name="take_photo_button">Take a photo!</string>
    <string name="update_info_button">Update Info</string>
    <string name="update_state_button">Update State</string>
    <string name="mute_button">Mute</string>
    <string name="full_volume_button">Full Volume!</string>

    <string name="start_auto_time_button">START - time </string>
    <string name="stop_auto_time_button">STOP - time</string>
    <string name="start_auto_location_button">START - location</string>
    <string name="stop_auto_location_button">STOP - location</string>

    <string name="local_CCC_service_connected">Camera Connector Connected</string>
    <string name="local_CCC_service_disconnected">Camera Connector Disconnected</string>
    <string name="local_CCC_service_started">Camera Connector Started</string>
    <string name="local_CCC_service_label">CCC Service</string>
    <string name="local_CCC_service_stopped">Camera Connector Stopped</string>
    <string name="title_activity_maps">Map</string>
</resources>
