<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SinglePhotoActivity">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/take_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo_button"/>

        <Button
            android:id="@+id/update_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_info_button"/>

        <Button
            android:id="@+id/update_state_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_state_button"/>

        <TextView
            android:id="@+id/response_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="Response"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>