<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutomaticPhotoActivity">

    <ImageView
        android:id="@+id/auto_response_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="24dp"
        android:text="Response"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_auto_time_button"
        app:layout_constraintVertical_bias="0.964" />

    <Button
        android:id="@+id/start_auto_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_auto_location_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stop_auto_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stop_auto_location_button"
        app:layout_constraintEnd_toEndOf="@+id/start_auto_location_button"
        app:layout_constraintStart_toStartOf="@+id/start_auto_location_button"
        app:layout_constraintTop_toBottomOf="@+id/start_auto_location_button" />

    <Button
        android:id="@+id/start_auto_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_auto_time_button"
        app:layout_constraintEnd_toEndOf="@+id/start_auto_location_button"
        app:layout_constraintStart_toStartOf="@+id/start_auto_location_button"
        app:layout_constraintTop_toBottomOf="@+id/stop_auto_location_button" />

    <Button
        android:id="@+id/stop_auto_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stop_auto_time_button"
        app:layout_constraintEnd_toEndOf="@+id/start_auto_location_button"
        app:layout_constraintStart_toStartOf="@+id/start_auto_location_button"
        app:layout_constraintTop_toBottomOf="@+id/start_auto_time_button" />

    <EditText
        android:id="@+id/interval_edittext"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="Interval"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/start_auto_time_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="273dp"
        android:layout_height="213dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/auto_response_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_auto_time_button">

        <LinearLayout
            android:id="@+id/log_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>